--- a/examples/webgl-motion.html
+++ b/examples/webgl-motion.html
@@ -15,6 +15,7 @@
     <script src="../lib/gl-matrix.js"></script>
     <script type="module">
       import { WebGL } from '../src/canvas.js'
+      import { createCube } from '../src/utils.js'
 
       const webgl = new WebGL()
       const gl = webgl.gl
@@ -57,41 +58,51 @@
         }
       }
 
+      const buffers = initBuffers()
       webgl.render((deltaTime) => {
-        drawScene(programInfo, initBuffers(), deltaTime)
+        drawScene(programInfo, buffers, deltaTime)
       })
 
       function initBuffers() {
-        const positions = [
-          -1.0,
-          1.0, // top right
-          1.0,
-          1.0, // top left
-          -1.0,
-          -1.0, // bottom left
-          1.0,
-          -1.0 // bottom right
+        // position
+        const positions = createCube(2, 2, 2)
+
+        // colors
+        const red = [1, 0, 0, 1]
+        const blue = [0, 0, 1, 1]
+        const green = [0, 1, 0, 1]
+        const white = [1, 1, 1, 1]
+        const yellow = [1, 1, 0, 1]
+        const purple = [1, 0, 1, 1]
+
+        const faceColors = [red, blue, green, white, yellow, purple]
+        let colors = []
+        for (let i = 0; i < faceColors.length; i++) {
+          const c = faceColors[i]
+          colors = colors.concat(c, c, c, c)
+        }
+
+        // indices
+        const indices = [
+          0,  1,  2,      0,  2,  3,    // front
+          4,  5,  6,      4,  6,  7,    // back
+          8,  9,  10,     8,  10, 11,   // top
+          12, 13, 14,     12, 14, 15,   // bottom
+          16, 17, 18,     16, 18, 19,   // right
+          20, 21, 22,     20, 22, 23,   // left
         ]
 
-        const red = [1.0, 0.0, 0.0, 1.0]
-        const blue = [0.0, 0.0, 1.0, 1.0]
-        const green = [0.0, 1.0, 0.0, 1.0]
-        const white = [1.0, 1.0, 1.0, 1.0]
-
-        const colors = [
-          red, // top right
-          green, // top left
-          blue, // bottom left
-          white // bottom right
-        ].flat()
         return {
-          position: webgl.createBuffer(positions),
-          color: webgl.createBuffer(colors)
+          position: webgl.createBuffer(new Float32Array(positions)),
+          color: webgl.createBuffer(new Float32Array(colors)),
+          indices: webgl.createBuffer(new Uint16Array(indices), 'element_array_buffer')
         }
       }
 
       let squareRotation = 0.0
       function drawScene(programInfo, buffers, deltaTime) {
+        squareRotation += deltaTime
+
         webgl.clear()
 
         const projectionMatrix = mat4.create()
@@ -109,57 +120,37 @@
           mat4.translate(modelViewMatrix, modelViewMatrix, [-0.0, 0.0, -6.0])
         }
 
-        squareRotation += deltaTime
-        // mat4.rotate(modelViewMatrix, modelViewMatrix, squareRotation, [1, 0, 0])
+        mat4.rotate(modelViewMatrix, modelViewMatrix, squareRotation, [1, 0, 0])
         mat4.rotate(modelViewMatrix, modelViewMatrix, squareRotation, [0, 1, 0])
-        // mat4.rotate(modelViewMatrix, modelViewMatrix, squareRotation, [0, 0, 1])
+        mat4.rotate(modelViewMatrix, modelViewMatrix, squareRotation, [0, 0, 0.6])
 
-        {
-          const numComponents = 2
-          const type = gl.FLOAT
-          const normalize = false
-          const stride = 0
-          const offset = 0
-          gl.bindBuffer(gl.ARRAY_BUFFER, buffers.position)
-          gl.vertexAttribPointer(
-            programInfo.attribLocations.vertexPosition,
-            numComponents,
-            type,
-            normalize,
-            stride,
-            offset
-          )
+        // Bind position buffer
+        webgl.bindArrayBuffer({
+          buffer: buffers.position, 
+          location: programInfo.attribLocations.vertexPosition,
+          numComponents: 3
+        })
 
-          gl.enableVertexAttribArray(programInfo.attribLocations.vertexPosition)
-        }
+        // Bind color buffer
+        webgl.bindArrayBuffer({
+          buffer: buffers.color, 
+          location: programInfo.attribLocations.vertexColor,
+          numComponents: 4
+        })
 
-        {
-          const numComponents = 4
-          const type = gl.FLOAT
-          const normalize = false
-          const stride = 0
-          const offset = 0
-          gl.bindBuffer(gl.ARRAY_BUFFER, buffers.color)
-          gl.vertexAttribPointer(
-            programInfo.attribLocations.vertexColor,
-            numComponents,
-            type,
-            normalize,
-            stride,
-            offset
-          )
-
-          gl.enableVertexAttribArray(programInfo.attribLocations.vertexColor)
-        }
+        // Bind indices buffer
+        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, buffers.indices)
 
         gl.useProgram(programInfo.program)
         gl.uniformMatrix4fv(programInfo.uniformLocations.projectionMatrix, false, projectionMatrix)
         gl.uniformMatrix4fv(programInfo.uniformLocations.modelViewMatrix, false, modelViewMatrix)
 
         {
+          // Draw
+          const vertexCount = 36
+          const type = gl.UNSIGNED_SHORT;
           const offset = 0
-          const vertexCount = 4
-          gl.drawArrays(gl.TRIANGLE_STRIP, offset, vertexCount)
+          gl.drawElements(gl.TRIANGLES, vertexCount, type, offset)
         }
       }
     </script>
